k8s/gitea/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-nodeport
  namespace: gitea
spec:
  selector:
    app: gitea
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 31030
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 222
    nodePort: 31121
    protocol: TCP
